nitesh updated the file 21-02-2026

--- a/WEBSITE/Pricing.html
+++ b/WEBSITE/Pricing.html
@@ -24,7 +24,7 @@
             <h3>2 Months</h3>
             <p class="price">₹6999/-</p>
             <p>Strong fundamentals with practice.</p>
-            <button>Enroll Now</button>
+            <a href="contact.html"><button>Enroll Now</button></a>
         </div>
 
         <div class="pricing-card">
