--- a/WEBSITE/Website.html
+++ b/WEBSITE/Website.html
@@ -49,6 +49,22 @@
 </h1>
     </section>
 </main>
+    
+     <main>
+    <section id="secondpage">
+        <h1> Start Today With The  <br> 
+              Basic to Advanced Html & Css Course.
+
+            <div><h6>Enroll Now Today 10% off</h6></div> 
+
+
+        <div>
+              <!-- <a href=""><button>Book your Sheet</button></a>  -->
+           </div>
+</h1>
+    </section>
+</main>
+
 
 
 </body>
