--- a/New folder/index.html
+++ b/New folder/index.html
@@ -14,7 +14,7 @@
 
    <header id="navbar">
     
-   <img src="../image/logo.PNG" alt="" width="200px"> 
+   <img src="./LOGO.png" alt="" width="200px"> 
     <nav>
     <ul>
     <li> <a href="#">Home</a></li>
@@ -61,7 +61,7 @@
     <!-- Card 1 -->
     
     <div id="card1">
-    <img src="../image/Front-end.png" alt="">
+    <img src="./Front-end.png" alt="">
 
     <div id="content">
     <p class="classmode">Offline Class</p>
@@ -78,7 +78,7 @@
     <!-- Card 2 -->
 
     <div id="card2">
-    <img src="../image/Back-end.png" alt="">
+    <img src="./Back-end.png" alt="">
 
     <div id="content">
     <p class="classmode">Offline Class</p>
@@ -95,7 +95,7 @@
     <!-- Card 3 -->
 
     <div id="card3">
-    <img src="../image/Platform.png" alt="">
+    <img src="./Platform.png" alt="">
 
     <div id="content">
     <p class="classmode">Offline Class</p>
@@ -112,7 +112,7 @@
     <!-- Card 4 -->
 
     <div id="card4">
-    <img src="../image/Compt.PNG" alt="">
+    <img src="./Compt.PNG" alt="">
 
     <div id="content">
     <p class="classmode">Offline Class</p>
